feat: application.properties to configure jackson serialzation and deserialization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,9 @@ logging.level.org.hibernate.orm.jdbc.bind=INFO
 management.endpoints.web.exposure.include=*
 springdoc.show-actuator=false 
 
+# Jackson configuration
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
+spring.jackson.default-property-inclusion=non_null
+
 
